# groundhog-time-tracker

./: .gitignore  .redocly.yaml  CONTRIBUTING.md  README.md  package-lock.json  package.json
.claude/: CLAUDE.md  settings.json
.claude/agent-memory/pr-review-agent/: MEMORY.md  project_branch_strategy.md  project_commit_scopes.md
.claude/agents/: pr-review-agent.md
.claude/commands/: pr-review.md
.claude/hooks/: enforce-feature-branch.sh  nvm-use-24.sh
.claude/scripts/: generate-mcp.sh
.githooks/: pre-commit
backend/: Groundhog.sln
backend/Groundhog.Api/: Groundhog.Api.csproj  Groundhog.Api.http  Program.cs
backend/Groundhog.Api/Controllers/: TagsController.cs  TaskTagsController.cs  TasksController.cs  TimeEntriesController.cs  TimerController.cs
backend/Groundhog.Api/Models/: Tags.cs  Tasks.cs  TimeEntries.cs
desktop/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
desktop/src/: App.tsx  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/pages/: HistoryPage.tsx  TaskDropdownPage.tsx  TimerPage.tsx
docs/: agents-roadmap.md  api-schema.md  backend-scaffold-review.md  domain-model.md  openapi.yaml
docs/decisions/: DECISIONS.md  backend-scaffold.md  ui-package.md
docs/prompts/agents/: pr-review-agent.md
frontend/: package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
