[package]
name = "groundhog-desktop"
version = "0.1.0"
description = "Groundhog time tracker — macOS panel app"
authors = []
edition = "2021"

[lib]
name = "groundhog_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
